# mcode

./: .dockerignore  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  mcode-research-v2.md  pyproject.toml  results_smoke.json  run-remaining-sweeps.sh
.github/workflows/: ci.yml  wiki-sync.yml
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
.tmp/diag/: bigcodebench-complete-shard-9.db
deploy/k8s/: Dockerfile.coordinator  README.md  bench.env  coordinator-pvc.yaml  coordinator-rbac.yaml  fetch-results.sh  launch-coordinator.sh  mcode-bench-indexed-job.yaml  oc_bench_sweep.py  ollama-gpu.yaml  ollama.yaml  results-pvc-rwx.yaml  results-pvc.yaml  run-bench.sh  run-suite.sh  run-swebench-lite-one.sh  run-swebench-lite.sh  run-swebench-live-one.sh  run-swebench-live.sh
docs/: COMMANDS.md  benchmarking.md
docs/plans/: 2026-03-01-agentic-patch-generation-design.md  2026-03-01-agentic-patch-generation-plan.md  2026-03-01-lean-tool-loop-design.md
docs/report/: README.md
research/: README.md
scripts/: batch_smoke.py  claude_swebench_test.py  generate_cli_docs.py  local_smoke.py  make_suite_chart.py  make_transfer_report.py  merge_shard_dbs.py
tests/: test_agent_generate.py  test_agent_tools.py  test_bigcodebench.py  test_cli_help.py  test_edits_to_patch.py  test_evalplus.py  test_line_edits_to_patch.py  test_livecodebench.py  test_llm_session_backend_kwargs.py  test_localize_files.py  test_oc_bench_sweep_validation.py  test_results_db.py  test_runner_llm_errors.py  test_swebench_live.py  test_tasks.py
(+297 files in other folders)
