[project]
name = "mcode"
version = "0.1.0"
description = "Small local model agentic coding benchmark harness"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0",
  "mellea>=0.3.1",
  "docker>=7.0.0",
  "pydantic>=2.0.0",
  "requests>=2.31.0",
  "tree-sitter>=0.21.0",
  "tree-sitter-python>=0.21.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.4.0",
]
swebench = [
  "swebench>=4.1.0",
]
evalplus = [
  "evalplus>=0.3.0",
]
datasets = [
  "datasets>=2.14.0",
]

[project.scripts]
mcode = "mcode.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
